# QB-COM

./: .gitignore  Cargo.toml  README.md  setup.bat  setup.sh
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: data_types.rs  errors.rs  lib.rs  memory_map.rs
crates/hal/: Cargo.toml
crates/hal/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  scanner.rs  tokens.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast_nodes.rs  declarations.rs  lib.rs  parser.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: lib.rs  scope.rs  type_checker.rs
crates/vm/: Cargo.toml
crates/vm/src/: compiler.rs  lib.rs  opcodes.rs  runtime.rs
examples/: calc.bas  fibonacci.bas  guess.bas  hello.bas  let_test.bas  loop.bas  minimal.bas  primes.bas  qb64_complete.bas  qb64_features.bas  qb64_simple.bas  test.bas  test_all.bas
installer/: qb-com.iss  qb-com.nsi
scripts/: build-installer.bat  build-installer.ps1  install.bat  install.ps1  install.sh  uninstall.sh
