[package]
name = "qb-cli"
version = "1.0.0"
edition = "2021"
authors = ["Thirawat27 <your.email@example.com>"]
description = "CLI tool for QB-COM QBasic Compiler"
repository = "https://github.com/thirawat27/QB-COM"
license = "MIT"
keywords = ["qbasic", "quickbasic", "compiler", "cli"]
categories = ["command-line-utilities", "compilers"]

[[bin]]
name = "qb"
path = "src/main.rs"

[dependencies]
qb-core = { path = "../crates/core" }
qb-lexer = { path = "../crates/lexer" }
qb-parser = { path = "../crates/parser" }
qb-semantic = { path = "../crates/semantic" }
qb-vm = { path = "../crates/vm" }
qb-hal = { path = "../crates/hal" }
qb-codegen = { path = "../crates/codegen" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
config = "0.14"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"
