[package]
name = "qb-hal"
version = "1.0.0"
edition = "2021"
authors = ["Thirawat27 <your.email@example.com>"]
description = "Hardware Abstraction Layer - DOS emulation for graphics, sound, and I/O"
repository = "https://github.com/thirawat27/QB-COM"
license = "MIT"
keywords = ["qbasic", "quickbasic", "dos", "vga", "sound", "emulation"]
categories = ["emulators", "hardware-support"]

[dependencies]
qb-core = { path = "../core" }
# Graphics and HAL - commented out until fully implemented
# winit = "0.29"
# pixels = "0.13"
# Audio - commented out until fully implemented  
# cpal = "0.15"
# rodio = "0.17"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
