[package]
name = "qb-vm"
version = "1.0.0"
edition = "2021"
authors = ["Thirawat27 <your.email@example.com>"]
description = "Bytecode compiler and Virtual Machine for QBasic"
repository = "https://github.com/thirawat27/QB-COM"
license = "MIT"
keywords = ["qbasic", "quickbasic", "vm", "bytecode", "interpreter"]
categories = ["compilers", "emulators"]

[dependencies]
qb-core = { path = "../core" }
qb-parser = { path = "../parser" }
qb-semantic = { path = "../semantic" }
qb-hal = { path = "../hal" }
thiserror = "1.0"
indexmap = "2.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.10.0"

[dev-dependencies]
pretty_assertions = "1.4"
